some locator issue solve

--- a/src/test/java/config/androidconfig.properties
+++ b/src/test/java/config/androidconfig.properties
@@ -1,7 +1,7 @@
 platformName=Android
-platformVersion=9
+platformVersion=8.1.0
 automationName=Appium
-deviceName=2220c33e10037ece
+deviceName=8d80f2587cf5
 androidapk=flickr.apk
 appPackage=com.flickr.android
 appActivity= com.yahoo.mobile.client.android.flickr.ui.misc.LoginActivity
